# NaviDir

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  FileManager.cpp  FileManager.hpp
src/config/: CMakeLists.txt  Config.cpp  Config.hpp
src/frontend/: CMakeLists.txt  TextFormat.cpp  TextFormat.hpp  UI.cpp  UI.hpp
src/scroller/: scroller.cpp
tests/: CMakeLists.txt  test_FileManager.cpp  test_UI.cpp
